--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #1d2630;
+    color: white;
+}
 
 h5{
     font-weight: bold;
@@ -23,15 +27,15 @@ a{
 
 .category{
     color: rgba(208, 208, 206, 0.5);
-    font-weight: bold;
+    /* font-weight: bold; */
     font-size: large;
-    margin-top: 12px
+    margin-top: 12px;    
 }
 
-.detail{
-    font-weight: bold;
-    font-size: large;
-    margin-top: 12px;
+.detail2{
+    font-weight: normal !important;
+    font-size: medium !important;
+    /* margin-top: 12px; */
 }
 
 .Quantum{
